--- a/style.css
+++ b/style.css
@@ -43,11 +43,12 @@ body {
     padding: 2px 8px 0 0;
 }
 .navtop div a:hover {
-    color: #ecf0f6;
+    color: #f6f2ec;
 }
 .content {
     width: 1000px;
     margin: 0 auto;
+    border: 1px solid red;
 }
 .content h2 {
     margin: 0;
@@ -191,3 +192,4 @@ body {
 .delete .yesno a:hover {
     background-color: #32a367;
 }
+
