--- a/styleLogin.css
+++ b/styleLogin.css
@@ -10,7 +10,7 @@ body{
 }
 .main{
 	width: 350px;
-	height: 500px;
+	height: 550px;
 	background: red;
 	overflow: hidden;
 	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
@@ -71,14 +71,25 @@ button:hover{
 	height: 460px;
 	background: #eee;
 	border-radius: 60% / 10%;
-	transform: translateY(-180px);
+	transform: translateY(-100px);
 	transition: .8s ease-in-out;
 }
 .login label{
 	color: #573b8a;
 	transform: scale(.6);
 }
-
+.radioSel {
+	color: white;
+	font-size: large;
+}
+.radioSel label {
+	display: inline;
+	color: white;
+	font-size: large;
+}
+.radioSel input {
+	display: inline;
+}
 #chk:checked ~ .login{
 	transform: translateY(-500px);
 }
