--- a/styleLogin.css
+++ b/styleLogin.css
@@ -78,18 +78,6 @@ button:hover{
 	color: #573b8a;
 	transform: scale(.6);
 }
-.radioSel {
-	color: white;
-	font-size: large;
-}
-.radioSel label {
-	display: inline;
-	color: white;
-	font-size: large;
-}
-.radioSel input {
-	display: inline;
-}
 #chk:checked ~ .login{
 	transform: translateY(-500px);
 }
@@ -98,4 +86,66 @@ button:hover{
 }
 #chk:checked ~ .signup label{
 	transform: scale(.6);
+}
+.questionario {
+	width: 350px;
+	height: 550px;
+	background: red;
+	overflow: hidden;
+	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
+	display: inline-block;
+	color: white;
+	font-size: large;
+	margin-left: 20px;
+}
+.questionario label {
+	display: inline;
+	color: white;
+	font-size: large;
+	margin: 3px 0px auto;
+}
+.questionario input {
+	display: inline;
+	margin: 1px;
+}
+.questionario p {
+	margin-left: 5px;
+}
+#chkQuest {
+	display: none;
+}
+.vacina{
+	height: 460px;
+	background: #eee;
+	border-radius: 60% / 10%;
+	transform: translateY(-5px);
+	transition: .8s ease-in-out;
+}
+.vacina label{
+	color: #573b8a;
+	justify-content: center;
+	display: flex;
+	transform: scale(1);
+}
+#chkQuest:checked ~ .vacina{
+	transform: translateY(-400px);
+}
+#chkQuest:checked ~ .vacina label{
+	transform: scale(1.6);	
+}
+.vacina input {
+	width: 60%;
+	height: 20px;
+	background: #5e5656;
+	justify-content: center;
+	display: flex;
+	margin: 20px auto;
+	padding: 10px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+	font-size: 20px;
+	color: white;
 }
